Bug 162467 - Position and Size dialog shows dimensions in incorrect measurement units
Summary: Position and Size dialog shows dimensions in incorrect measurement units
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
: 162664 162814 162848 162850 (view as bug list)
Depends on:
Blocks: Dialog Measurement-Units User-Locale
  Show dependency treegraph
 
Reported: 2024-08-14 09:57 UTC by Gabor Kelemen (Collabora)
Modified: 2024-11-18 11:39 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Not a solution, but documents my findings (1.21 KB, patch)
2024-08-16 21:20 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-08-14 09:57:00 UTC
Opening the Position and Size dialog in Impress shows the drawing shapes size in wrong measurement units.

1. Set the locale in Options - Languages and Locales - General to a metric one, such as German
2. Open attachment 195754 [details] from bug 162388
3. Select one of the shapes and press F4
-> the sizes are in inches instead of cm, while on the sidebar they are in cm as seen on  attachment 195755 [details] from bug 162388

Seems to have started in 24.8 with 

https://git.libreoffice.org/core/+/055e7d866680390dca6e18864ca4297cc0ebda84%5E%21/#F0

author	Gabor Kelemen <gabor.kelemen.extern@allotropia.de>	Tue Apr 23 20:04:43 2024 +0200
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Thu May 09 00:30:52 2024 +0200

Use less SdOptionsLayout->GetMetric/SetMetric in favor of officecfg
Comment 1 Regina Henschel 2024-08-14 11:26:06 UTC
The setting information is not correctly brought to the dialog when opening the document.

Workaround: After the document is loaded go to Tools > Options > Impress > General. Switch to another unit > Apply > Switch back to the desired unit > Apply. Analogously for other modules.
Comment 2 Regina Henschel 2024-08-16 21:20:06 UTC
Created attachment 195874 [details]
Not a solution, but documents my findings

One problem is, that the measure unit is not written to settings.xml in case of Impress.

With the attached additions the measure unit is written to settings.xml and when the file is reload, this unit is set in Tools > Options > Impress > General.

But the position&size dialog still shows inch (") and the position and size values in the sidebar show the last unit that was written to the registrymodifications.xcu.

So unfortunately not a solution :(
Comment 3 Cor Nouws 2024-09-04 09:29:52 UTC
*** Bug 162664 has been marked as a duplicate of this bug. ***
Comment 4 m_a_riosv 2024-09-05 22:24:30 UTC
*** Bug 162814 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2024-09-06 13:21:52 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3d99cc908365a27f275ae8f221958a8282e668fc

tdf#162467: fix measurement units in impress/draw

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-09-06 17:12:24 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/10523d1e9ff6d6464c37864b7d79ee4b372a7aad

tdf#162467: fix measurement units in impress/draw

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-09-06 18:30:39 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/b37b4565164a74972c0e5cfa7e04441a58d48737

tdf#162467: fix measurement units in impress/draw

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Robert Großkopf 2024-09-08 12:56:33 UTC
*** Bug 162850 has been marked as a duplicate of this bug. ***
Comment 9 Robert Großkopf 2024-09-08 14:50:20 UTC
*** Bug 162848 has been marked as a duplicate of this bug. ***
Comment 10 Callegar 2024-09-08 16:16:22 UTC
While testing wrt this issue, I noticed that there are problems (minor) even in the 24.2.x version of LibO.

In 24.2.5.x, impress/draw may occasionally show measurements in cm even if the measurement unit is set to mm. Changing the measurement unit to cm and then back to mm fixes the issue.

Possibly the problem with 24.2.5.x was triggered by using 24.8.x and then going back to 24.2.x.