tdf#162467: fix measurement units in impress/draw

Regression from
commit 055e7d866680390dca6e18864ca4297cc0ebda84
Author: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Date:   Tue Apr 23 20:04:43 2024 +0200

    Use less SdOptionsLayout->GetMetric/SetMetric in favor of officecfg

This code was removed for no apparent reason.
Reintroduce it and adapt it

Change-Id: Iea23ba824cdc20e59edbc316fefc7325c73926a2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172940
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>